rx-multi-task/build/log/idf_py_stdout_output_29378
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/rx-multi-task.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/rx-multi-task.c.obj 
/home/yabi/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20251107/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/yabi/skool/6900/prototyping/rx-multi-task/build/config -I/home/yabi/skool/6900/prototyping/rx-multi-task/main -I/opt/esp-idf/components/newlib/platform_include -I/opt/esp-idf/components/freertos/config/include -I/opt/esp-idf/components/freertos/config/include/freertos -I/opt/esp-idf/components/freertos/config/riscv/include -I/opt/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/opt/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/opt/esp-idf/components/freertos/esp_additions/include -I/opt/esp-idf/components/esp_hw_support/include -I/opt/esp-idf/components/esp_hw_support/include/soc -I/opt/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/opt/esp-idf/components/esp_hw_support/dma/include -I/opt/esp-idf/components/esp_hw_support/ldo/include -I/opt/esp-idf/components/esp_hw_support/debug_probe/include -I/opt/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/opt/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/opt/esp-idf/components/esp_hw_support/power_supply/include -I/opt/esp-idf/components/esp_hw_support/port/esp32c3/. -I/opt/esp-idf/components/esp_hw_support/port/esp32c3/include -I/opt/esp-idf/components/heap/include -I/opt/esp-idf/components/heap/tlsf -I/opt/esp-idf/components/log/include -I/opt/esp-idf/components/soc/include -I/opt/esp-idf/components/soc/esp32c3 -I/opt/esp-idf/components/soc/esp32c3/include -I/opt/esp-idf/components/soc/esp32c3/register -I/opt/esp-idf/components/hal/platform_port/include -I/opt/esp-idf/components/hal/esp32c3/include -I/opt/esp-idf/components/hal/include -I/opt/esp-idf/components/esp_rom/include -I/opt/esp-idf/components/esp_rom/esp32c3/include -I/opt/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -I/opt/esp-idf/components/esp_rom/esp32c3 -I/opt/esp-idf/components/esp_common/include -I/opt/esp-idf/components/esp_system/include -I/opt/esp-idf/components/esp_system/port/soc -I/opt/esp-idf/components/esp_system/port/include/riscv -I/opt/esp-idf/components/esp_system/port/include/private -I/opt/esp-idf/components/riscv/include -I/opt/esp-idf/components/lwip/include -I/opt/esp-idf/components/lwip/include/apps -I/opt/esp-idf/components/lwip/include/apps/sntp -I/opt/esp-idf/components/lwip/lwip/src/include -I/opt/esp-idf/components/lwip/port/include -I/opt/esp-idf/components/lwip/port/freertos/include -I/opt/esp-idf/components/lwip/port/esp32xx/include -I/opt/esp-idf/components/lwip/port/esp32xx/include/arch -I/opt/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/yabi/skool/6900/prototyping/rx-multi-task/managed_components/espressif__mpu6050/include -I/opt/esp-idf/components/esp_driver_gpio/include -I/opt/esp-idf/components/esp_driver_i2c/include -I/opt/esp-idf/components/driver/deprecated -I/opt/esp-idf/components/driver/i2c/include -I/opt/esp-idf/components/driver/touch_sensor/include -I/opt/esp-idf/components/driver/twai/include -I/opt/esp-idf/components/esp_pm/include -I/opt/esp-idf/components/esp_ringbuf/include -I/opt/esp-idf/components/esp_driver_pcnt/include -I/opt/esp-idf/components/esp_driver_gptimer/include -I/opt/esp-idf/components/esp_driver_spi/include -I/opt/esp-idf/components/esp_driver_mcpwm/include -I/opt/esp-idf/components/esp_driver_ana_cmpr/include -I/opt/esp-idf/components/esp_driver_i2s/include -I/opt/esp-idf/components/esp_driver_sdmmc/include -I/opt/esp-idf/components/sdmmc/include -I/opt/esp-idf/components/esp_driver_sdspi/include -I/opt/esp-idf/components/esp_driver_sdio/include -I/opt/esp-idf/components/esp_driver_dac/include -I/opt/esp-idf/components/esp_driver_rmt/include -I/opt/esp-idf/components/esp_driver_tsens/include -I/opt/esp-idf/components/esp_driver_sdm/include -I/opt/esp-idf/components/esp_driver_uart/include -I/opt/esp-idf/components/vfs/include -I/opt/esp-idf/components/esp_driver_ledc/include -I/opt/esp-idf/components/esp_driver_parlio/include -I/opt/esp-idf/components/esp_driver_usb_serial_jtag/include -I/opt/esp-idf/components/esp_driver_twai/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/yabi/skool/6900/prototyping/rx-multi-task=. -fmacro-prefix-map=/opt/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/rx-multi-task.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/rx-multi-task.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/rx-multi-task.c.obj -c /home/yabi/skool/6900/prototyping/rx-multi-task/main/rx-multi-task.c
/home/yabi/skool/6900/prototyping/rx-multi-task/main/rx-multi-task.c: In function 'rx_task':
/home/yabi/skool/6900/prototyping/rx-multi-task/main/rx-multi-task.c:111:9: error: 'len' undeclared (first use in this function); did you mean 'mblen'?
  111 |         len = uart_read_bytes(UART_NUM_1, data, (BUF_SIZE - 1), 20 / portTICK_PERIOD_MS);
      |         ^~~
      |         mblen
/home/yabi/skool/6900/prototyping/rx-multi-task/main/rx-multi-task.c:111:9: note: each undeclared identifier is reported only once for each function it appears in
/home/yabi/skool/6900/prototyping/rx-multi-task/main/rx-multi-task.c:111:43: error: 'data' undeclared (first use in this function)
  111 |         len = uart_read_bytes(UART_NUM_1, data, (BUF_SIZE - 1), 20 / portTICK_PERIOD_MS);
      |                                           ^~~~
/home/yabi/skool/6900/prototyping/rx-multi-task/main/rx-multi-task.c: At top level:
/home/yabi/skool/6900/prototyping/rx-multi-task/main/rx-multi-task.c:17:30: warning: 'complimentary_angle' defined but not used [-Wunused-variable]
   17 | static complimentary_angle_t complimentary_angle;
      |                              ^~~~~~~~~~~~~~~~~~~
/home/yabi/skool/6900/prototyping/rx-multi-task/main/rx-multi-task.c:15:29: warning: 'acce' defined but not used [-Wunused-variable]
   15 | static mpu6050_acce_value_t acce;
      |                             ^~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/yabi/skool/6900/prototyping/rx-multi-task/build/bootloader/esp-idf/esptool_py && /home/yabi/.espressif/python_env/idf5.5_py3.14_env/bin/python /opt/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/yabi/skool/6900/prototyping/rx-multi-task/build/bootloader/bootloader.bin
Bootloader binary size 0x5270 bytes. 0x2d90 bytes (36%) free.
ninja: build stopped: subcommand failed.
